chore(style): fix white vertical space on mobile

--- a/docusaurus/src/css/custom.css
+++ b/docusaurus/src/css/custom.css
@@ -149,3 +149,7 @@ li {
 .w-full {
   width: 100%;
 }
+
+.h-auto {
+  height: auto;
+}
